CSC 2018/09/22: Estabilización de proyecto

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,29 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Xiinbal</title>
+  <title>Xíinbal | Tours increibles para gente aventurera</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+   <!-- <app-root></app-root> -->
+   <header class="header"> 
+    <div class="header__logo-box">
+        <img src="img/logo-white.png" alt="Logo" class="header__logo">
+    </div>
+     <div class="header__text-box">
+          <h1 class="heading-primary">
+              <span class="heading-primary--main">Xíinbal</span>
+              <span class="heading-primary--sub">Donde compras y te vuelves más rico</span>   
+          </h1>
+
+          <a href="#" class="btn btn--white btn--animated">
+              Descubre nuestros tours
+          </a>
+     </div>
+     
+</header>
 </body>
 </html>
