--- a/src/index.html
+++ b/src/index.html
@@ -9,22 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-   <!-- <app-root></app-root> -->
-   <header class="header"> 
-    <div class="header__logo-box">
-        <img src="img/logo-white.png" alt="Logo" class="header__logo">
-    </div>
-     <div class="header__text-box">
-          <h1 class="heading-primary">
-              <span class="heading-primary--main">Xíinbal</span>
-              <span class="heading-primary--sub">Donde compras y te vuelves más rico</span>   
-          </h1>
-
-          <a href="#" class="btn btn--white btn--animated">
-              Descubre nuestros tours
-          </a>
-     </div>
-     
-</header>
+   <app-root></app-root>
 </body>
 </html>
